New module for integration tests using Playwright framework.
Signed-off-by: Miquel Simon <msimonma@redhat.com>